--- a/memo_project/login/static/login/style.css
+++ b/memo_project/login/static/login/style.css
@@ -13,7 +13,7 @@
   left: 0;
   height: 100px;
   width: 100%;
-  background-color: rgba(43, 43, 43, 1);
+  background-color: #d0ecb9;
   border-bottom: none;
   z-index: 1000;
 }
