--- a/memo_project/login/templates/login/login.html
+++ b/memo_project/login/templates/login/login.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="body">
+  <div class="background-image">
+  </div>
+
   <div> class="page-wrapper d-flex flex-column">
   <header class="header">
     <h1 id="logo" class="logo my-4">
